--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
       <div class="container">
         <a class="site-logo" href="#"><img src="img/logo.svg" alt="Логотип компании Техномарт" width="109" height="19"></a>
         <form class="header-search" action="https://echo.htmlacademy.ru" method="post">
+          <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17"><path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg>
           <label class="visually-hidden" for="search">Поиск</label>
           <input type="search" id="search" name="search" placeholder="Поиск:">
           <button class="visually-hidden" type="submit"><span>Искать</span></button>
         </form>
         <div class="shop-menu">
-          <a href="#">Закладки: 0</a>
-          <a href="#">Корзина: 0</a>
+          <a class="shop-menu-bookmark" href="#">Закладки: 0</a>
+          <a class="shop-menu-cart" href="#">Корзина: 0</a>
           <a class="button button-checkout" href="#">Оформить заказ</a>
         </div>
       </div>
@@ -28,11 +29,13 @@
       <div class="container">
         <p class="shop-info">Интернет-магазин строительных материалов и инструментов для ремонта</p>
         <div class="header-contacts">
-          <p><a class="header-tel" href="tel:+78125550555" aria-label="Позвоните нам">+7 (812) 555-05-55</a></p>
+          <a class="header-tel" href="tel:+78125550555" aria-label="Позвоните нам">+7 (812) 555-05-55</a>
           <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
-        <div class="user-menu">
-          <a class="button-profile button-login" href="#">Войти</a>
+        <div class="user-menu user-menu-main">
+          <a class="button-profile button-login" href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17"><path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z"/><path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"/></svg>
+            Войти</a>
           <a class="button-profile button-registration" href="#">Регистрация</a>
         </div>
       </div>
@@ -80,14 +83,12 @@
                 <a class="button button-details" href="catalog.html">Открыть каталог</a>
               </div>
             </div>
-            <div>
-              <button type="button"><span class="visually-hidden">Вперед</span></button>
-              <button type="button"><span class="visually-hidden">Назад</span></button>
+            <button class="slider-arrows" type="button"><span class="visually-hidden">Вперед</span></button>
+            <button class="slider-arrows" type="button"><span class="visually-hidden">Назад</span></button>
+            <div class="slider-pagination">
+              <div class="slider-dots active-dot"><span class="visually-hidden">Слайд 1</span></div>
+              <div class="slider-dots"><span class="visually-hidden">Слайд 2</span></div>
             </div>
-        </div>
-          <div>
-            <button type="button"><span class="visually-hidden">Слайд 1</span></button>
-            <button type="button"><span class="visually-hidden">Слайд 2</span></button>
           </div>
         </div>
         <div class="right-column-promo">
@@ -116,7 +117,7 @@
         <div class="goods-list">
           <article class="cat-item cat-item-main">
             <img src="img/b9000.jpg" alt="Перфоратор Bosch BFG 9000" width="218" height="170">
-            <h3>Перфоратор Bosch BFG 9000</h3>
+            <h3>Перфоратор <span class="item-title-uppercase">Bosch BFG 9000</span></h3>
             <p class="item-price">32500 Р.</p>
             <p class="item-sale">25500 Р.</p>
             <div class="buy-popup">
@@ -126,7 +127,7 @@
           </article>
           <article class="cat-item cat-item-main">
             <img src="img/b3000.jpg" alt="Перфоратор Bosch BFG 3000" width="218" height="170">
-            <h3>Перфоратор Bosch BFG 3000</h3>
+            <h3>Перфоратор <span class="item-title-uppercase">Bosch BFG 3000</span></h3>
             <p class="item-price">22500 Р.</p>
             <p class="item-sale">15500 Р.</p>
             <div class="buy-popup">
@@ -136,7 +137,7 @@
           </article>
           <article class="cat-item cat-item-main">
             <img src="img/b6000.jpg" alt="Перфоратор Bosch BFG 6000" width="218" height="170">
-            <h3>Перфоратор Bosch BFG 6000</h3>
+            <h3>Перфоратор <span class="item-title-uppercase">Bosch BFG 6000</span></h3>
             <p class="item-price">30500 Р.</p>
             <p class="item-sale">25500 Р.</p>
             <div class="buy-popup">
@@ -146,7 +147,8 @@
           </article>
           <article class="cat-item cat-item-main">
             <img src="img/b2000.jpg" alt="Перфоратор Bosch BFG 2000" width="218" height="170">
-            <h3>Перфоратор Bosch BFG 2000</h3>
+            <h3>Перфоратор <span class="item-title-uppercase">Bosch BFG 2000</span></h3>
+            <p class="item-price"></p>
             <p class="item-sale">12500 Р.</p>
             <div class="buy-popup">
               <a class="button item-buy" href="#">Купить</a>
@@ -192,22 +194,22 @@
           </ul>
           <div class="service-slide service-delivery service-slide-active">
             <h3>Доставка</h3>
-            <p>Мы с удовольствием доставим ваш товар прямо
+            <p>Мы с удовольствием доставим ваш товар прямо<br>
               к вашему подъезду совершенно бесплатно!
               Ведь мы неплохо заработаем,<br>
               поднимая его на ваш этаж!</p>
           </div>
           <div class="service-slide service-guarantee">
             <h3>Гарантия</h3>
-            <p>Если купленный у нас товар поломается или заискрит,
+            <p>Если купленный у нас товар поломается или заискрит,<br>
               а также в случае пожара, спровоцированного его возгоранием,
               вы всегда можете быть уверены в нашей гарантии.
-              Мы обменяем сгоревший товар на новый.
+              Мы обменяем сгоревший товар на новый.<br>
               Дом уж восстановите как-нибудь сами.</p>
           </div>
           <div class="service-slide service-credit">
             <h3>Кредит</h3>
-            <p>Залезть в долговую яму стало проще!
+            <p>Залезть в долговую яму стало проще!<br>
               Кредитные консультанты придут вам на помощь.</p>
             <a class="button button-details" href="#">Отправить заявку</a>
           </div>
@@ -236,7 +238,8 @@
       </section>
       <section class="contacts-section">
         <h2 class="title sub-title">Контакты</h2>
-        <a href="#"><img src="img/map.jpg" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8" width="300" height="158"></a>
+        <p>Вы можете забрать товар сами, заехав в наш офис!</p>
+        <a class="contacts-map" href="#"><img src="img/map.jpg" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8" width="300" height="158"></a>
         <a class="button button-details" href="#">Заблудились? Напишите нам!</a>
       </section>
     </div>
@@ -245,11 +248,11 @@
     <div class="footer-top">
       <div class="container">
         <div class="footer-top-left">
-          <a class="site-logo" href="#"><img src="img/logo.svg" alt="Логотип компании Техномарт" width="138" height="23"></a>
+          <a class="site-logo footer-logo" href="#"><img src="img/logo.svg" alt="Логотип компании Техномарт" width="138" height="23"></a>
           <p class="footer-address">
             г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-            <a class="footer-tel" href="tel:+78125550555" aria-label="Позвоните нам">+7 (812) 555-05-55</a>
           </p>
+          <a class="footer-tel" href="tel:+78125550555" aria-label="Позвоните нам">+7 (812) 555-05-55</a>
         </div>
         <div class="footer-top-right">
           <ul class="footer-nav">
@@ -270,20 +273,20 @@
     </div>
     <div class="footer-bottom">
       <div class="container">
-        <p>
+        <p class="copyright">
           © 2010–2019 Компания «Техномарт»
           Все права защищены
         </p>
-        <ul class="social-button">
-          <li><a href="#"><span class="visually-hidden">Вконтакте</span></a></li>
-          <li><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
-          <li><a href="#"><span class="visually-hidden">Инстаграм</span></a></li>
+        <ul class="social-list">
+          <li class="social-button vk-button"><a href="#"><span class="visually-hidden">Вконтакте</span></a></li>
+          <li class="social-button fb-button"><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+          <li class="social-button insta-button"><a href="#"><span class="visually-hidden">Инстаграм</span></a></li>
         </ul>
-        <p>
+        <p class="feedback">
           Обратная связь:
           <a class="academy" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
         </p>
-        <p>
+        <p class="designed">
           Разработано —
           <a class="academy" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
         </p>
@@ -291,31 +294,34 @@
     </div>
   </footer>
 
-  <section class="modal">
+  <section class="modal feedback-modal">
     <h2 class="visually-hidden">Форма обратной связи</h2>
     <form action="https://echo.htmlacademy.ru" method="post">
-      <div>
-        <label for="name">Ваше имя:</label>
-        <input type="text" id="name" name="name" placeholder="Имя Фамилия">
-        <label for="mail">Ваш e-mail:</label>
-        <input type="email" id="mail" name="mail" placeholder="email@example.com">
+      <div class="feedback-top modal-wrapper">
+        <div class="feedback-name">
+          <label for="name">Ваше имя:</label>
+          <input type="text" id="name" name="name" placeholder="Имя Фамилия">
+        </div>
+        <div class="feedback-mail">
+          <label for="mail">Ваш e-mail:</label>
+          <input type="email" id="mail" name="mail" placeholder="email@example.com">
+        </div>
       </div>
-      <div>
+      <div class="feedback-text modal-wrapper">
         <label for="message">Текст письма:</label>
         <textarea id="message" name="message" placeholder="В свободной форме"></textarea>
       </div>
-      <button type="submit">Отправить</button>
+      <div class="feedback-submit">
+        <button class="button button-details" type="submit">Отправить</button>
+      </div>
     </form>
-    <button type="button">
-      <span class="visually-hidden">Закрыть</span>
-    </button>
+    <button class="modal-close" type="button"><span class="visually-hidden">Закрыть окно</span></button>
   </section>
-  <section class="modal">
+
+  <section class="modal map-big-modal">
     <h2 class="visually-hidden">Карта проезда</h2>
     <img src="img/map-popup.jpg" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8" width="940" height="446">
-    <button type="button">
-      <span class="visually-hidden">Закрыть</span>
-    </button>
+    <button class="modal-close" type="button"><span class="visually-hidden">Закрыть окно</span></button>
   </section>
 </body>
 
